# rvo-ros-wrapper

./: Readme.md
player_map/: CMakeLists.txt  package.xml
player_map/include/player_map/: rosmap.hpp
player_map/launch/: test.launch
player_map/src/: draw_paths.cpp  map.c  rosmap.cpp  rosmap_test.cpp
player_map/srv/: GetMap.srv
rvo2/: CMakeLists.txt  package.xml
rvo_move/: .gitignore  CMakeLists.txt  package.xml
rvo_move/config/: rviz.rviz  scarab_move.yaml
rvo_move/example/: test.cpp
rvo_move/include/rvo_move/: bot_client.hpp
rvo_move/launch/: move.launch  recursive_robots.launch
rvo_move/maps/: levine_towne_nav.pgm  levine_towne_nav.yaml  map.yaml  stage.world
rvo_move/matlab/: Map.m  delauncy_decomp.m  fit_polygons.m  make_graph.m  plot_delaunay.m  plot_graph.m  plot_poly.m  poly_smooth.m  save_outline.m
rvo_move/src/: bot_client.cpp  move_client.cpp  move_server.cpp  rvo_wrapper.cpp  rvo_wrapper.hpp
rvo_move/urdf/: robot.urdf  robot.xacro
