<?xml version="1.0"?>
<package>
  <name>rvo2</name>
  <version>0.0.0</version>
  <description>The rvo2 package</description>
  <maintainer email="bcharrow@seas.upenn.edu">Ben Charrow</maintainer>
  <author>Jur van den Berg</author>
  <author>Stephen J. Guy</author>
  <author>Jamie Snape</author>
  <author>Ming C. Lin</author>
  <author>Dinesh Manocha</author>
  
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
